Bug 1203046 - Call |NRECNotification| once RFCOMM is connected. r=shuang, a=2.2r